--- a/2024-DFES/index.html
+++ b/2024-DFES/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Northern Powergrid Future Energy Scenarios 2024</title>
-	<link rel="shortcut icon" type="image/png" href="https://www.northernpowergrid.com/sites/default/files/favicon.png" />
+	<title>SPENW - DFES 2024</title>
+	<link rel="shortcut icon" type="image/png" href="https://www.spenergynetworks.co.uk/favicon.ico" />
 	<link rel="StyleSheet" href="resources/nouislider.min.css" type="text/css" />
 	<link rel="StyleSheet" href="resources/leaflet.css" type="text/css" />
 	<link rel="stylesheet" href="resources/stuquery.barchart.css" type="text/css" />
@@ -21,8 +21,8 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@Northpowergrid" />
 	<meta name="twitter:url" property="og:url" content="https://odileeds.github.io/northern-powergrid/2024-DFES/" />
-	<meta name="twitter:title" property="og:title" content="NorthernPowerGrid Future Energy Scenarios 2024" />
-	<meta name="twitter:description" property="og:description" content="Northern Powergrid's potential future scenarios, a regionalised interpretion of the 2024 National Grid Future Energy Pathways, and a Northern Powergrid Reference Scenario fitting the ENA Open Networks DNO Scenario criteria" />
+	<meta name="twitter:title" property="og:title" content="SP Electricity North West Future Energy Scenarios 2024" />
+	<meta name="twitter:description" property="og:description" content="SP Electricity North West's potential future scenarios, a regionalised interpretion of the 2024 National Grid Future Energy Pathways, and a Northern Powergrid Reference Scenario fitting the ENA Open Networks DNO Scenario criteria" />
 	<meta name="twitter:image" property="og:image" content="https://odileeds.github.io/northern-powergrid/2024-DFES/screenshot.png" />
 </head>
 <body>
@@ -39,14 +39,14 @@
 			<div class="glory-opacity">
 				<div class="holder logos">
 					<a href="https://open-innovations.org/"><img alt="Open Innovations" src="resources/logos/oi-square-white.svg" /></a>
-					<a href="https://www.northernpowergrid.com/"><img alt="Northern Powergrid" src="resources/logos/northernpowergrid.svg" /></a>
+					<a href="https://www.enwl.co.uk/"><img alt="SP Electricity North West" src="resources/logos/spenw-logo-1.svg" /></a>
 					<a href="https://www.erm.com/"><img alt="ERM" src="resources/logos/erm.svg" /></a>
 				</div>
 			</div>
 		</div>
 		<div class="scenario title">
 			<div class="holder">
-				<h1>Northern Powergrid Distribution Future Energy Scenarios - DFES 2024</h1>
+				<h1>SP Electricity North West Distribution Future Energy Scenarios - DFES 2024</h1>
 			</div>
 		</div>
 	</header>
@@ -55,7 +55,7 @@
 	<div class="b6-bg" id="scenario">
 		<div class="intro tallpadded b5-bg">
 			<div class="holder">
-				<p>Northern Powergrid's potential future scenarios, both interpreted from the 2024 National Grid Future Energy Scenarios, and a Northern Powergrid Reference Scenario fitting the ENA Open Networks DNO Scenario criteria.</p>
+				<p>SP Electricity North West future electricity scenarios, aligned with the National Grid Future Energy Scenarios framework, and SP Electricity North West Granular forecast.</p>
 			</div>
 		</div>
 		<div class="message"></div>
@@ -131,7 +131,7 @@
  			<p>This tool shows how we can achieve net-zero carbon emissions by 2050. As part of our planning for decarbonisation we considered a range of possible scenarios in our region. We are publishing our modelling results here for our stakeholders to use, apply to their own models, review, and comment upon. The five scenarios are:</p>
 			
  			<ol>
-				<li>NPg Reference Scenario – net zero compliant to 2050 target. Accelerated uptake of electric vehicles and heat pumps in the early years.</li>
+				<li>Best View – net zero compliant to 2050 target. Accelerated uptake of electric vehicles and heat pumps in the early years.</li>
 				<li>Hydrogen Evolution – net zero compliant to 2050 target. Energy system is adapted for the use of hydrogen in heating and industry.</li>
 				<li>Electric Engagement – net zero compliant to 2050 target. In contrast to the previous scenario, the majority of heating is powered by electricity.</li>
 				<li>Holistic Transition – net zero compliant to 2050 target. Heating is mainly electric but hydrogen is used around industrial clusters. Smart homes and electric vehicles provide flexibility to the grid.</li>
@@ -142,7 +142,7 @@
 			<p>Previous versions of Northern Powergrid's DFES can be found for <a href="https://odileeds.github.io/northern-powergrid/2020-DFES/index.html">2020</a>, <a href="https://odileeds.github.io/northern-powergrid/2021-DFES/index.html">2021</a>, <a href="https://odileeds.github.io/northern-powergrid/2022-DFES/index.html">2022</a> and <a href="https://odileeds.github.io/northern-powergrid/2023-DFES/index.html">2023</a>, or choose from <a href="https://odileeds.github.io/northern-powergrid/">all our visualisations</a>.</p>
 			<p>If you have any comments, questions or feedback on our scenarios, please send them to <a href="mailto:System.Forecasting@Northernpowergrid.com?subject=Northern%20Powergrid%202024%20DFES">System.Forecasting@Northernpowergrid.com</a></p>	
 			<h3>Northern Powergrid DFES 2024 scenario assumptions in detail</h3>
-			<h4>NPg Reference Scenario &mdash; net zero in 2050</h4>			
+			<h4>SP Electricity North West Reference Scenario &mdash; net zero in 2050</h4>			
 			<p>This scenario is highly ambitious and aligns with our stakeholders' vision, getting on the path early to achieve net-zero by 2050. The scenario relies on intensive investment in low carbon technologies, as well as early action from government and a high level of engagement from consumers, in order to achieve aggressive rollout rates, especially of EVs and heat pumps.</p>
 			<dl>
 				<dt><em>Electricity demand</em></dt>
@@ -233,7 +233,7 @@
 				<h3><a href="https://open-innovations.org/blog/2019-12-09-visualising-future-energy-scenarios">Interactive visualisation</a></h3>
 				<p>&copy; Open Innovations (Stuart Lowe) 2024. Released under an <a href="https://github.com/odileeds/northern-powergrid/blob/master/LICENSE">MIT licence</a>. <a href="https://odileeds.org/projects/northernpowergrid/dfes/">Read about the project</a> or view the <a href="https://github.com/odileeds/northern-powergrid">repository on Github</a>.</p>
 				<h3><a href="https://datamillnorth.org/">Energy scenario data</a></h3>
-				<p>&copy; Northern Powergrid &amp; ERM 2024. Released under a Creative Commons Attribution Licence.</p>
+				<p>&copy; SP Elecitricity North West &amp; ERM 2024. Released under a Creative Commons Attribution Licence.</p>
 				<h3><a href="https://open-innovations.org/blog/2019-11-27-building-electricity-distribution-geography">Geographic boundaries</a></h3>
 				<p><a href="https://geoportal.statistics.gov.uk/datasets/local-authority-districts-april-2019-boundaries-uk-bgc">Local Authority District boundaries</a>, <a href="https://geoportal.statistics.gov.uk/datasets/ons::output-areas-2021-boundaries-ew-bfe/explore">Output Area boundaries</a>, and the <a href="https://geoportal.statistics.gov.uk/datasets/ons::nspl-online-latest-centroids/about">conversion from Postcodes to Output Areas (2021)</a> uses data from the ONS geo service. They are <a href="https://www.ons.gov.uk/methodology/geography/licences">released under the OGL</a>:</p>
 				<ul>
