--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>Northern Powergrid Distribution Future Energy Scenarios</title>
 	<link rel="StyleSheet" href="style.css" type="text/css" />
-	<link rel="shortcut icon" type="image/png" href="https://www.northernpowergrid.com/sites/default/files/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="https://www.enwl.co.uk/sites/default/files/favicon.png" />
 </head>
 <body>
 
@@ -14,14 +14,14 @@
 			<div class="glory-opacity">
 				<div class="holder">
 					<a href="https://open-innovations.org/"><img alt="Open Innovations logo" src="data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='640' height='640' overflow='auto' viewBox='-32 -32 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cmask id='oi-person'%3E%3Cpath d='m-32-32h64v64h-12v-24a4 4 0 0 0 -4 -4h-8a4 4 0 0 0 -4 4v24h-36zm44 27m-8 0a8 8 0 1 0 16 0 8 8 0 1 0-16 0' fill='%23fff'%3E%3C/path%3E%3C/mask%3E%3Cg id='oi-logo' fill='white'%3E%3Ccircle r='32' mask='url(%23oi-person)'%3E%3C/circle%3E%3C/g%3E%3C/svg%3E" style="height:91px;width:91px;padding:0.25em;" /></a>
-					<a href="https://www.northernpowergrid.com/"><img alt="Northern Powergrid" src="https://odileeds.org/dashboard/data/img/northernpowergrid.svg" title="Northern Powergrid"></a>
+					<a href="https://www.enwl.co.uk/"><img alt="SP Electricity North West" src="https://odileeds.org/dashboard/data/img/northernpowergrid.svg" title="Northern Powergrid"></a>
 					<a href="http://www.element-energy.co.uk/"><img alt="Element Energy" src="https://odileeds.org/dashboard/data/img/elementenergy.svg" title="ERM"></a>
 				</div>
 			</div>
 		</div>
 		<div class="deep-electrification title">
 			<div class="holder">
-				<h1>Northern Powergrid Distribution Future Energy Scenarios</h1>
+				<h1>SP Electricity North West Future Energy Scenarios</h1>
 			</div>
 		</div>
 	</header>
